deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopkuber-ingress
  namespace: shopkuber
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "10"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "30"
spec:
  ingressClassName: nginx
  rules:
    - host: api.shopkuber.example.com
      http:
        paths:
          # Auth service
          - path: /api/v1/auth
            pathType: Prefix
            backend:
              service:
                name: auth-svc
                port:
                  number: 8081

          # Catalog service (public read)
          - path: /api/v1/categories
            pathType: Prefix
            backend:
              service:
                name: catalog-svc
                port:
                  number: 8082

          - path: /api/v1/products
            pathType: Prefix
            backend:
              service:
                name: catalog-svc
                port:
                  number: 8082

          # Orders service
          - path: /api/v1/cart
            pathType: Prefix
            backend:
              service:
                name: orders-svc
                port:
                  number: 8083

          - path: /api/v1/orders
            pathType: Prefix
            backend:
              service:
                name: orders-svc
                port:
                  number: 8083

          # Seller service
          - path: /api/v1/seller
            pathType: Prefix
            backend:
              service:
                name: seller-svc
                port:
                  number: 8084

          - path: /api/v1/admin
            pathType: Prefix
            backend:
              service:
                name: seller-svc
                port:
                  number: 8084

          # Reviews + Payments service
          - path: /api/v1/reviews
            pathType: Prefix
            backend:
              service:
                name: reviews-svc
                port:
                  number: 8085

          - path: /api/v1/payments
            pathType: Prefix
            backend:
              service:
                name: reviews-svc
                port:
                  number: 8085
